Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14480

template using not instantiated

XMLWordPrintable

    • b67ebf9ffce6bbba7952b36120f49d7abf956e66

      // Case 1
      template<typename T>
      using type = T;
      
      // Case 2
      struct Parent {
          template<typename T>
          using type = T;
      };
      
      // Case 3
      template<typename T>
      struct ParentT {
          template<typename DT>
          using type = DT;
      };
      
      struct Foo { int bar; };
      
      void func()
      {
          type<Foo> p1;
          Parent::type<Foo> p2;
          ParentT<Foo>::type<Foo> p3;
          // bar not highlighted
          p1.bar;
          p2.bar;
          p3.bar;
      }

        For Gerrit Dashboard: QTCREATORBUG-14480
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes